Added google maps api script

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbfiF4RCke6XGOjCE_WKNCn9vsEufx99I&libraries=places" async defer></script>
   </body>
 </html>
